Document header & cookie parameters (in: header / in: cookie) (#32)
